# log.c

./: CMakeLists.txt  Pull-requests.txt  README.md
example/: log_conf.h  main.c
include/: log.h
samples/basic/: main.c
samples/callbacks/: main.c
samples/threading/: main.c
src/: log.c  log.h  log_conf.h  log_conf.sample.h
